# DGM-Programming-Language

./: CMakeLists.txt  Emit_LLVM_IR.sh  Folder_Structure.graphql  LLVM_IR_with_DGM_Annotations.ll  License.md  README.md  artwork.md  ast_dump.yaml  compile_and_run.sh  docker-compose.yml  dockerfile  execution_with_runtime_hooks.sh  hello.ll  layout.pgsql  lexer_output_tokens.cs  makerfile  run.sh  safe_add.ll
Helper/: Info.md
docs/: MAPPING.md
examples/: hello.dgm  list_test.dgm  parallel.dgm  safe_add.dgm  tuple_test.dgm
include/: ast.h  codegen.h  lexer.h  parser.h  runtime.h
src/: ast.cpp  codegen.cpp  driver.cpp  lexer.cpp  parser.cpp  runtime.c
tests/: ci.yml  run_examples.sh
